[gd_scene load_steps=34 format=3 uid="uid://gqocd4ygf6dl"]

[ext_resource type="PackedScene" uid="uid://cmfnri103q43r" path="res://Scenes/Entities/player.tscn" id="1_n5owg"]
[ext_resource type="Script" path="res://Scenes/Rooms/BossCamera.gd" id="1_xxfpu"]
[ext_resource type="Texture2D" uid="uid://cuwutygp2rbo2" path="res://kamart/Free Pixel Art Forest/Preview/Background.png" id="2_5jkw4"]
[ext_resource type="TileSet" uid="uid://gb2uik1t1m8y" path="res://Assets/Tilesets/Moss.tres" id="2_wjdly"]
[ext_resource type="Script" path="res://Scenes/HealthLabel.gd" id="3_6pnal"]
[ext_resource type="Script" path="res://Scenes/Rooms/BossHealthLabel.gd" id="3_er7lx"]
[ext_resource type="Texture2D" uid="uid://ccb34s62omn3l" path="res://kamart/Free Pixel Art Forest/PNG/Background layers/Layer_0008_3.png" id="3_je8vp"]
[ext_resource type="Script" path="res://Scenes/Menu button.gd" id="4_lbnj7"]
[ext_resource type="Texture2D" uid="uid://be8ofcbbvkhtd" path="res://kamart/Free Pixel Art Forest/PNG/Background layers/Layer_0001_8.png" id="4_vlsqk"]
[ext_resource type="Script" path="res://Scenes/Rooms/GameOver.gd" id="5_ugm13"]
[ext_resource type="Script" path="res://Scenes/Rooms/BossT.gd" id="6_uhsit"]
[ext_resource type="Texture2D" uid="uid://dptdt0puxukrv" path="res://characters/Boss/EVil Wizard 2/Sprites/Idle.png" id="8_q526h"]
[ext_resource type="AudioStream" uid="uid://cwr2mp7e4acj8" path="res://Assets/Boss/Sounds/Arcane Beacon.wav" id="9_syy1n"]
[ext_resource type="AudioStream" uid="uid://c3tcadyaes4fw" path="res://Assets/Boss/Sounds/Activate Glyph Forcefield.wav" id="10_5075t"]
[ext_resource type="AudioStream" uid="uid://1glgbalwdyrf" path="res://Assets/Boss/Sounds/Arcane Wind Chime Gust.wav" id="11_tueu8"]
[ext_resource type="AudioStream" uid="uid://r0dy28yir31s" path="res://Assets/Boss/Sounds/UI Message Appear 01.wav" id="12_vnwh3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jr3sc"]
bg_color = Color(0.890196, 0.247059, 0.180392, 0.690196)

[sub_resource type="AtlasTexture" id="AtlasTexture_0attq"]
atlas = ExtResource("8_q526h")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv5dj"]
atlas = ExtResource("8_q526h")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_aac5b"]
atlas = ExtResource("8_q526h")
region = Rect2(500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_iymo7"]
atlas = ExtResource("8_q526h")
region = Rect2(750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdvtx"]
atlas = ExtResource("8_q526h")
region = Rect2(1000, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsuf0"]
atlas = ExtResource("8_q526h")
region = Rect2(1250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1vxi"]
atlas = ExtResource("8_q526h")
region = Rect2(1500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_odbl0"]
atlas = ExtResource("8_q526h")
region = Rect2(1750, 0, 250, 250)

[sub_resource type="SpriteFrames" id="SpriteFrames_a0pp2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0attq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv5dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aac5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iymo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdvtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsuf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1vxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odbl0")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mpxky"]
size = Vector2(46, 93)

[sub_resource type="Curve2D" id="Curve2D_j1viu"]
_data = {
"points": PackedVector2Array(-173.445, 256.986, -175, -260, 0, -176, 80, -215, 80.9408, 216.267, -520, 268)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_lgpw6"]
_data = {
"points": PackedVector2Array(-173.445, 256.986, 175, -260, 0, -176, -80, -215, 80.9408, 216.267, 520, 268)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_7gev2"]
_data = {
"points": PackedVector2Array(-173.445, 256.986, 80, -215, -520, 268, -175, -260, 80.9408, 216.267, 0, -176)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_2c6nj"]
_data = {
"points": PackedVector2Array(-225.992, 383.179, 225, -400, -520, 268, -225, -400, 80.9408, 216.267, 520, 268)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_yq7r0"]
_data = {
"points": PackedVector2Array(-173.445, 256.986, -80, -215, 520, 268, 175, -260, 80.9408, 216.267, 0, -176)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_7hthf"]
_data = {
"points": PackedVector2Array(-225, -400, -225, -400, 520, 268, 225, -400, 225, -400, -520, 268)
}
point_count = 2

[node name="BossT" type="Node2D"]
script = ExtResource("1_xxfpu")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(79, -339)
scale = Vector2(2.25536, 2.25536)
texture = ExtResource("2_5jkw4")

[node name="Layer00083" type="Sprite2D" parent="."]
position = Vector2(11, -596)
scale = Vector2(2.94128, 2.94128)
texture = ExtResource("3_je8vp")

[node name="Layer00018" type="Sprite2D" parent="Layer00083"]
position = Vector2(5.4398, 129.195)
scale = Vector2(0.534162, 0.496476)
texture = ExtResource("4_vlsqk")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_ugm13")

[node name="HealthPanel" type="Panel" parent="UI"]
anchors_preset = -1
anchor_right = 0.003
anchor_bottom = 0.003
offset_right = 123.16
offset_bottom = 47.84

[node name="HealthLabel" type="Label" parent="UI/HealthPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 7.0
offset_right = 78.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 25
text = "Health: 3"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_6pnal")

[node name="BossHealthPanel" type="Panel" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="HealthLabel" type="Label" parent="UI/BossHealthPanel"]
layout_mode = 0
offset_left = 57.0
offset_top = 12.0
offset_right = 243.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 25
text = "Boss Health: 15"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_er7lx")

[node name="DeathScreen" type="Panel" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jr3sc")

[node name="YouDied" type="Label" parent="UI/DeathScreen"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 65
text = "You Died"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu button" type="Button" parent="UI/DeathScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -113.5
offset_top = -237.0
offset_right = 113.5
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Menu"
script = ExtResource("4_lbnj7")

[node name="EndPanel" type="Panel" parent="UI"]
visible = false
offset_right = 1280.0
offset_bottom = 720.0

[node name="EndLabel" type="Label" parent="UI/EndPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -37.5
offset_right = 43.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Game Over

You Won"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BossCam" type="Camera2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_n5owg")]
position = Vector2(0, 280)
unlocked_dj = true
unlocked_dash = true

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(4, 4)
tile_set = ExtResource("2_wjdly")
format = 2
layer_0/tile_data = PackedInt32Array(393207, 65536, 0, 393208, 65536, 0, 393209, 65536, 0, 393210, 65536, 0, 393211, 65536, 0, 393212, 65536, 0, 393213, 65536, 0, 393214, 65536, 0, 393215, 65536, 0, 327680, 65536, 0, 327681, 65536, 0, 327682, 65536, 0, 327683, 65536, 0, 327684, 65536, 0, 327685, 65536, 0, 327686, 65536, 0, 327687, 65536, 0, 327688, 65536, 0, 393206, 262144, 1, 327689, 327680, 1, -393207, 327680, 0, -327690, 262144, 0, -327689, 65536, 2, -327688, 65536, 2, -327687, 65536, 2, -327686, 65536, 2, -327685, 65536, 2, -327684, 65536, 2, -327683, 65536, 2, -327682, 65536, 2, -327681, 65536, 2, -393216, 65536, 2, -393215, 65536, 2, -393214, 65536, 2, -393213, 65536, 2, -393212, 65536, 2, -393211, 65536, 2, -393210, 65536, 2, -393209, 65536, 2, -393208, 65536, 2, -262154, 131072, 1, -196618, 131072, 1, -131082, 131072, 1, -65546, 131072, 1, -10, 131072, 1, 65526, 131072, 1, 131062, 131072, 1, 196598, 131072, 1, 262134, 131072, 1, 327670, 131072, 1, -327671, 0, 1, -262135, 0, 1, -196599, 0, 1, -131063, 0, 1, -65527, 0, 1, 9, 0, 1, 65545, 0, 1, 131081, 0, 1, 196617, 0, 1, 262153, 0, 1, 458740, 65536, 1, 524276, 65536, 1, 458741, 65536, 1, 524277, 65536, 1, 458742, 65536, 1, 524278, 65536, 1, 458743, 65536, 1, 524279, 65536, 1, 458744, 65536, 1, 524280, 65536, 1, 458745, 65536, 1, 524281, 65536, 1, 458746, 65536, 1, 524282, 65536, 1, 458747, 65536, 1, 524283, 65536, 1, 458748, 65536, 1, 524284, 65536, 1, 458749, 65536, 1, 524285, 65536, 1, 458750, 65536, 1, 524286, 65536, 1, 458751, 65536, 1, 524287, 65536, 1, 393216, 65536, 1, 458752, 65536, 1, 393217, 65536, 1, 458753, 65536, 1, 393218, 65536, 1, 458754, 65536, 1, 393219, 65536, 1, 458755, 65536, 1, 393220, 65536, 1, 458756, 65536, 1, 393221, 65536, 1, 458757, 65536, 1, 393222, 65536, 1, 458758, 65536, 1, 393223, 65536, 1, 458759, 65536, 1, 393224, 65536, 1, 458760, 65536, 1, 393225, 65536, 1, 458761, 65536, 1, 393226, 65536, 1, 458762, 65536, 1, 393227, 65536, 1, 458763, 65536, 1, -524278, 65536, 1, -458742, 65536, 1, -393206, 65536, 1, -327670, 65536, 1, -262134, 65536, 1, -196598, 65536, 1, -131062, 65536, 1, -65526, 65536, 1, 10, 65536, 1, 65546, 65536, 1, 131082, 65536, 1, 196618, 65536, 1, 262154, 65536, 1, 327690, 65536, 1, -524277, 65536, 1, -458741, 65536, 1, -393205, 65536, 1, -327669, 65536, 1, -262133, 65536, 1, -196597, 65536, 1, -131061, 65536, 1, -65525, 65536, 1, 11, 65536, 1, 65547, 65536, 1, 131083, 65536, 1, 196619, 65536, 1, 262155, 65536, 1, 327691, 65536, 1, -458763, 65536, 1, -393227, 65536, 1, -458762, 65536, 1, -393226, 65536, 1, -458761, 65536, 1, -393225, 65536, 1, -458760, 65536, 1, -393224, 65536, 1, -458759, 65536, 1, -393223, 65536, 1, -458758, 65536, 1, -393222, 65536, 1, -458757, 65536, 1, -393221, 65536, 1, -458756, 65536, 1, -393220, 65536, 1, -458755, 65536, 1, -393219, 65536, 1, -458754, 65536, 1, -393218, 65536, 1, -458753, 65536, 1, -393217, 65536, 1, -524288, 65536, 1, -458752, 65536, 1, -524287, 65536, 1, -458751, 65536, 1, -524286, 65536, 1, -458750, 65536, 1, -524285, 65536, 1, -458749, 65536, 1, -524284, 65536, 1, -458748, 65536, 1, -524283, 65536, 1, -458747, 65536, 1, -524282, 65536, 1, -458746, 65536, 1, -524281, 65536, 1, -458745, 65536, 1, -524280, 65536, 1, -458744, 65536, 1, -524279, 65536, 1, -458743, 65536, 1, -458764, 65536, 1, -393228, 65536, 1, -327692, 65536, 1, -262156, 65536, 1, -196620, 65536, 1, -131084, 65536, 1, -65548, 65536, 1, -12, 65536, 1, 65524, 65536, 1, 131060, 65536, 1, 196596, 65536, 1, 262132, 65536, 1, 327668, 65536, 1, 393204, 65536, 1, -327691, 65536, 1, -262155, 65536, 1, -196619, 65536, 1, -131083, 65536, 1, -65547, 65536, 1, -11, 65536, 1, 65525, 65536, 1, 131061, 65536, 1, 196597, 65536, 1, 262133, 65536, 1, 327669, 65536, 1, 393205, 65536, 1, -65538, 131075, 2, -65537, 131075, 2, -131072, 131075, 2, -131071, 131075, 2, -131070, 196611, 2, -65539, 65539, 2)

[node name="Boss" type="Area2D" parent="."]
position = Vector2(0, -176)
script = ExtResource("6_uhsit")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Boss"]
position = Vector2(1, -13)
scale = Vector2(1.582, 1.73047)
sprite_frames = SubResource("SpriteFrames_a0pp2")
autoplay = "default"

[node name="ColorRect" type="ColorRect" parent="Boss"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
shape = SubResource("RectangleShape2D_mpxky")
debug_color = Color(1, 0, 0, 0.419608)

[node name="Danger" type="Timer" parent="Boss"]
process_callback = 0
wait_time = 2.5
one_shot = true

[node name="PathBL" type="Path2D" parent="."]
visible = false
curve = SubResource("Curve2D_j1viu")

[node name="PathFollow" type="PathFollow2D" parent="PathBL"]
position = Vector2(0, -176)
rotates = false
cubic_interp = false
loop = false

[node name="PathBR" type="Path2D" parent="."]
visible = false
curve = SubResource("Curve2D_lgpw6")

[node name="PathFollow" type="PathFollow2D" parent="PathBR"]
position = Vector2(0, -176)
rotates = false
cubic_interp = false
loop = false

[node name="PathLB" type="Path2D" parent="."]
visible = false
curve = SubResource("Curve2D_7gev2")

[node name="PathFollow" type="PathFollow2D" parent="PathLB"]
position = Vector2(-520, 268)
rotates = false
cubic_interp = false
loop = false

[node name="PathLR" type="Path2D" parent="."]
visible = false
curve = SubResource("Curve2D_2c6nj")

[node name="PathFollow" type="PathFollow2D" parent="PathLR"]
position = Vector2(-520, 268)
rotates = false
cubic_interp = false
loop = false

[node name="PathRB" type="Path2D" parent="."]
visible = false
curve = SubResource("Curve2D_yq7r0")

[node name="PathFollow" type="PathFollow2D" parent="PathRB"]
position = Vector2(520, 268)
rotates = false
cubic_interp = false
loop = false

[node name="PathRL" type="Path2D" parent="."]
visible = false
curve = SubResource("Curve2D_7hthf")

[node name="PathFollow" type="PathFollow2D" parent="PathRL"]
position = Vector2(520, 268)
rotates = false
cubic_interp = false
loop = false

[node name="Audio" type="Node" parent="."]

[node name="A1" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("9_syy1n")
volume_db = -15.0
bus = &"SFX"

[node name="A2" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_5075t")
volume_db = -20.0
bus = &"SFX"

[node name="AB" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("11_tueu8")
volume_db = -20.0
bus = &"SFX"

[node name="Wait" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("12_vnwh3")
volume_db = -10.0
bus = &"SFX"

[connection signal="pressed" from="UI/DeathScreen/Menu button" to="UI/DeathScreen/Menu button" method="_on_pressed"]
[connection signal="body_entered" from="Boss" to="Boss" method="_on_body_entered"]
[connection signal="body_exited" from="Boss" to="Boss" method="_on_body_exited"]
[connection signal="timeout" from="Boss/Danger" to="Boss" method="_on_danger_timeout"]
